--- a/TeduShop.Web/Views/Admin/Index.cshtml
+++ b/TeduShop.Web/Views/Admin/Index.cshtml
@@ -11,10 +11,10 @@
   <title>Index</title>
 
   <script src="~/Scripts/plugins/angular/angular.js"></script>
+  <script src="~/Scripts/spa/app.js"></script>
 </head>
 <body>
   <div>
-    10 + 20 = {{10+20}}
   </div>
 </body>
 </html>
